--- a/vuejs/vue.html
+++ b/vuejs/vue.html
@@ -264,5 +264,26 @@ pluralize
 </script>
 <!-- --------------------------------------------------------------------------- -->
 
+<!-- sample manifest for PWA (myProj/public/manifest.json) -->
+{
+  "name": "Shuffle It! 2",
+  "short_name": "ShuffleIt!",
+  "icons": [
+    {
+      "src": "./img/icons/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./img/icons/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": "./index.html",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#4DBA87"
+}
 <!-- --------------------------------------------------------------------------- -->
 <!-- --------------------------------------------------------------------------- -->
