--- a/vuetify/vuetify.html
+++ b/vuetify/vuetify.html
@@ -1,4 +1,4 @@
-<!-- boilerplate -->
+<!-- boilerplate / app structure (v-container » v-layout » v-flex.) -->
 <v-app>
   <v-navigation-drawer app></v-navigation-drawer>
   <v-toolbar app></v-toolbar>
@@ -15,17 +15,17 @@
 
 <!-- CENTER TEXT / APPLY BACKGROUND COLOR -->
 <div class="purple darken-2 text-xs-center">
-    <!-- text color -->
-    <span class="white--text">Lorem ipsum</span>
-    <!-- text color darken/lighten -->
-    <span class="white--text text--darken-4">Lorem ipsum</span>
+  <!-- text color -->
+  <span class="white--text">Lorem ipsum</span>
+  <!-- text color darken/lighten -->
+  <span class="white--text text--darken-4">Lorem ipsum</span>
 </div>
 
 <!-- material icons: https://material.io/tools/icons/?style=baseline -->
 
-<!-- button -->
+<!-- button (NOTE: add "text-capitalize" class to avoid all uppercase) -->
 <v-btn dark color="indigo">
-    <v-icon dark>favorite</v-icon>
+  <v-icon dark>Favorites</v-icon>
 </v-btn>
 
 <!-- change theme -->
@@ -33,9 +33,77 @@
 
 <!-- spacing -->
 <!-- https://vuetifyjs.com/en/framework/spacing#spacing -->
+<!-- =========================================================================== -->
 
 <!-- container -->
-<!-- * add 'fluid' - for fullwidth -->
+<!-- NOTE: add 'fluid' - for fullwidth -->
 <v-container class="my-5">
-    content
+  content here
 </v-container>
+<!-- or (hero sample / centered texts) -->
+<template>
+  <v-container fluid fill-height>
+    <v-layout justify-center align-center column>
+      <div class="display-4 font-weight-black text-xs-center">HEALTHY MEALS</div>
+      <div class="display-4 font-weight-black text-xs-center mb-3">FOR YOUR TABLE</div>
+      <div class="display-1 font-weight-bold text-xs-center">Finally be a foodie at home with fresh, chef-prepared meals delivered daily to your door.</div>
+      <v-btn fab class="mt-5 brown darken-4"><v-icon large color="white">expand\_more</v-icon>
+      </v-btn>
+    </v-layout>
+  </v-container>
+</template>
+
+<!-- card with title -->
+<v-card width="500">
+  <v-toolbar color="primary" dark flat>
+    <v-toolbar-title>
+      <v-icon>mdi-pencil</v-icon> Settings
+    </v-toolbar-title>
+  </v-toolbar>
+  <v-card-text>
+    <div>Word of the Day</div>
+    <p class="display-1 text--primary">
+      be•nev•o•lent
+    </p>
+    <p>adjective</p>
+    <div class="text--primary">
+      well meaning and kindly.<br>
+      "a benevolent smile"
+    </div>
+  </v-card-text>
+  <v-card-actions class="justify-center">
+    <v-btn color="info" @click="updateMaxRange" large>
+      <v-icon>mdi-check</v-icon> Submit
+    </v-btn>
+  </v-card-actions>
+</v-card>
+
+<!-- display toggle: -->
+<!-- show only on xs view -->
+<v-spacer class="d-flex d-sm-none"></v-spacer>
+<!-- hide only on xs view -->
+<v-spacer class="d-none d-sm-flex"></v-spacer>
+
+<!-- very large text -->
+<style scoped>
+  .display-vlg {
+    font-size: 15rem !important;
+    line-height: 15rem;
+  }
+</style>
+
+<!-- routerview animation -->
+<v-content>
+  <v-fade-transition mode="out-in">
+    <router-view></router-view>
+  </v-fade-transition>
+</v-content>
+
+<!-- grid system -->
+<v-row>
+  <v-col v-for="n in 3" :key="n" cols="4">
+    <v-alert color="primary" dark>
+      I'm a basic alert component.
+    </v-alert>
+  </v-col>
+</v-row>
