--- a/vuetify/vuetify.html
+++ b/vuetify/vuetify.html
@@ -37,46 +37,46 @@
 
 <!-- container -->
 <!-- NOTE: add 'fluid' - for fullwidth -->
-<v-container class="my-5">
-  content here
-</v-container>
-<!-- or (hero sample / centered texts) -->
-<template>
-  <v-container fluid fill-height>
-    <v-layout justify-center align-center column>
-      <div class="display-4 font-weight-black text-xs-center">HEALTHY MEALS</div>
-      <div class="display-4 font-weight-black text-xs-center mb-3">FOR YOUR TABLE</div>
-      <div class="display-1 font-weight-bold text-xs-center">Finally be a foodie at home with fresh, chef-prepared meals delivered daily to your door.</div>
-      <v-btn fab class="mt-5 brown darken-4"><v-icon large color="white">expand\_more</v-icon>
-      </v-btn>
-    </v-layout>
+  <v-container class="my-5">
+    content here
   </v-container>
-</template>
+<!-- or (hero sample / centered texts) -->
+  <template>
+    <v-container fluid fill-height>
+      <v-layout justify-center align-center column>
+        <div class="display-4 font-weight-black text-xs-center">HEALTHY MEALS</div>
+        <div class="display-4 font-weight-black text-xs-center mb-3">FOR YOUR TABLE</div>
+        <div class="display-1 font-weight-bold text-xs-center">Finally be a foodie at home with fresh, chef-prepared meals delivered daily to your door.</div>
+        <v-btn fab class="mt-5 brown darken-4"><v-icon large color="white">expand\_more</v-icon>
+        </v-btn>
+      </v-layout>
+    </v-container>
+  </template>
 
 <!-- card with title -->
-<v-card width="500">
-  <v-toolbar color="primary" dark flat>
-    <v-toolbar-title>
-      <v-icon>mdi-pencil</v-icon> Settings
-    </v-toolbar-title>
-  </v-toolbar>
-  <v-card-text>
-    <div>Word of the Day</div>
-    <p class="display-1 text--primary">
-      be•nev•o•lent
-    </p>
-    <p>adjective</p>
-    <div class="text--primary">
-      well meaning and kindly.<br>
-      "a benevolent smile"
-    </div>
-  </v-card-text>
-  <v-card-actions class="justify-center">
-    <v-btn color="info" @click="updateMaxRange" large>
-      <v-icon>mdi-check</v-icon> Submit
-    </v-btn>
-  </v-card-actions>
-</v-card>
+  <v-card width="500">
+    <v-toolbar color="primary" dark flat>
+      <v-toolbar-title>
+        <v-icon>mdi-pencil</v-icon> Settings
+      </v-toolbar-title>
+    </v-toolbar>
+    <v-card-text>
+      <div>Word of the Day</div>
+      <p class="display-1 text--primary">
+        be•nev•o•lent
+      </p>
+      <p>adjective</p>
+      <div class="text--primary">
+        well meaning and kindly.<br>
+        "a benevolent smile"
+      </div>
+    </v-card-text>
+    <v-card-actions class="justify-center">
+      <v-btn color="info" @click="updateMaxRange" large>
+        <v-icon>mdi-check</v-icon> Submit
+      </v-btn>
+    </v-card-actions>
+  </v-card>
 
 <!-- display toggle: -->
 <!-- show only on xs view -->
@@ -85,25 +85,42 @@
 <v-spacer class="d-none d-sm-flex"></v-spacer>
 
 <!-- very large text -->
-<style scoped>
-  .display-vlg {
-    font-size: 15rem !important;
-    line-height: 15rem;
-  }
-</style>
+  <style scoped>
+    .display-vlg {
+      font-size: 15rem !important;
+      line-height: 15rem;
+    }
+  </style>
 
 <!-- routerview animation -->
-<v-content>
-  <v-fade-transition mode="out-in">
-    <router-view></router-view>
-  </v-fade-transition>
-</v-content>
+  <v-content>
+    <v-fade-transition mode="out-in">
+      <router-view></router-view>
+    </v-fade-transition>
+  </v-content>
 
-<!-- grid system -->
-<v-row>
-  <v-col v-for="n in 3" :key="n" cols="4">
-    <v-alert color="primary" dark>
-      I'm a basic alert component.
-    </v-alert>
-  </v-col>
-</v-row>
+<!-- (centered element: horizontal and vertical) -->
+  <!-- grid system -->
+  <v-container fill-height>
+    <v-row align="center" justify="center">
+      <v-col cols="4">
+        <v-alert color="primary" dark>
+          I'm a basic alert component.
+        </v-alert>
+      </v-col>
+      <v-col cols="4">
+        <v-alert color="primary" dark>
+          I'm a basic alert component.
+        </v-alert>
+      </v-col>
+    </v-row>
+  </v-container>
+
+  <!-- flex system -->
+  <v-container fill-height>
+    <div class="d-flex mx-auto">
+      <v-alert color="primary" dark>
+        I'm a basic alert component.
+      </v-alert>
+    </div>
+  </v-container>
