updated js for loop (arrays and objects)

--- a/bulma/bulma.html
+++ b/bulma/bulma.html
@@ -10,6 +10,13 @@
 -->
 <!-- ------------------------------------------------------------------------------- -->
 
+<!-- display utitlities / hidden classes -->
+  is-spaced <!-- add space below the current element -->
+    Ex: <h1 class="title is-2 is-spaced">Build you blockchain lottery</h1>
+  has-shadow <!-- useful in navbar to add bottom border -->
+    Ex: <div class="navbar has-shadow" role="navigation" aria-label="main navigation">
+
+
 <!-- button -->
 <a class="button is-primary">
   Button
@@ -169,6 +176,8 @@
         <!-- ... -->
     </div>
 </div>
+  is-1
+  is-2
 
   is-mobile
   is-gapless
@@ -687,6 +696,7 @@
 <h2 class="subtitle">Subtitle</h2>
 
   is-1
+  is-2
   ...
   is-6
 <!-- ------------------------------------------------------------------------------- -->
@@ -941,7 +951,10 @@ navbar the main container
         navbar-divider a horizontal line to separate navbar items
 
   <!-- styles -->
+  has-shadow
+  is-spaced
   is-transparent
+
   is-fixed-top
   is-fixed-bottom
   has-navbar-fixed-top
